--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    test
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -41,7 +42,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="/static/js/1.3aec9dfa.chunk.js"></script>
-<script src="/static/js/main.72f93e60.chunk.js"></script>
+    <script type='text/javascript'>console.log('testing script tag')</script>
   </body>
 </html>
